--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "benchy",
+  "name": "test_02_nodejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fastify": "^2.12.0",
+    "node-fetch": "^2.6.0"
+  }
 }
